swipeback/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: swipeback
  name: swipeback
  namespace: sportswipe
spec:
  replicas: 1
  selector:
    matchLabels:
      service: swipeback
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: swipeback
    spec:
      containers:
      - name: swipeback
        image: registry.goebel.app/jonas/hackathon-swipeback:4
        imagePullPolicy: ""
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
status: {}
